Some cleanup work for the detail-view form. Placed Title and Description field correctly at the top of the form, made expando switch into text link, left-aligned stamping checkbox.
git-svn-id: svn+ssh://svn.osafoundation.org/svn/server/cosmo/trunk@4573 5fd0b11a-f2f7-0310-948e-c8f80ebed640

--- a/cosmo/src/main/webapp/templates/default/ui.css
+++ b/cosmo/src/main/webapp/templates/default/ui.css
@@ -1142,19 +1142,18 @@ td.dataDisplayLabel {
 }
 .expandoHead {
     width: 100%;
-    height: 20px;
-    background: #eee;
+    border-top: 1px solid #ccc;
+    height: 21px;
     text-align: right;
     vertical-align: middle;
-    line-height: 20px;
-    cursor: pointer;
+    line-height: 21px;
 }
 .expandoEnableCheckbox {
+    padding-left: 4px;
     padding-right: 6px;
 }
 .expandoTriangle {
-    padding-left: 8px;
-    padding-right: 8px;
+    padding-right: 4px;
 }
 .expandoIcon {
     padding-right: 8px;
